# Constants

./: .gitignore
.github/workflows/: wolfram-tests.yml
checkpoints/: bootstrap_records.wl  flint_chain_p50_p100_p150_reg1e22_tol1e13.json  flint_quality_p32_gate.json  flint_reg_transition_p32_n8192.json  n8_results_20260216.txt
cpp/: CMakeLists.txt  README.md
cpp/src/: constants_objective.cpp
docs/: devlog.md  flint_migration_plan.md  session_handoff.md
logs/: runAll.txt
spec/: SPEC.txt
tests/: driverTests.wl  newtonTests.wl  runAll.wl  runAndLog.wl  runHarness.wl  runTests.wl  tailTests.wl
tools/: build_flint_cpp.sh  iterate_fix.py  run_bootstrap_plan.wl  run_flint_bootstrap.py  run_flint_calibrate_stage.py  run_flint_chain.py  run_flint_objective.sh  run_flint_precision_ladder.py  run_flint_quality_chain.py  test_flint_bootstrap_retry.sh  test_flint_calibrate_stage.sh  test_flint_derivatives.sh  test_flint_objective.sh  test_flint_optimize_smoke.sh
wl/: Bootstrap.wl  Constants.wl  Driver.wl  Newton.wl  TailDerivatives.wl
